# vedalang

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.beads/: interactions.jsonl
docs/: STATUS.md  baseline_diagnostics.md  canonical_form.md  exploration_prompt.md  pattern_validation.md  pcg_investigation.md  schema_evolution.md
docs/vedalang-design-agent/: README.md  baseline_diagnostics.md  canonical_form.md  ergonomic_improvements.md  iis_diagnostics.md  minisystem_spec.md  pcg_investigation.md
docs/vedalang-user/: LLMS.md  README.md
experiments/capacity_bounds/: tableir_cap_bounds_v1.yaml  tableir_cap_bounds_v2.yaml  tableir_cap_bounds_v3_timevarying.yaml  tableir_cap_bounds_v4_limtypes.yaml  tableir_cap_bounds_v5_combined.yaml
fixtures/: create_miniveda2.py
rules/: README.md  constraints.yaml  decision_tree.yaml  patterns.yaml
tests/: conftest.py  test_diagnostic_integration.py  test_golden_fixtures.py  test_iis_parsing.py  test_minisystem_golden.py  test_online_compat.py  test_patterns_expand.py  test_require_table_diagnostics.py  test_schema_compatibility.py  test_table_schemas.py  test_tableir_invariants.py  test_tableir_schema.py  test_veda_check.py  test_veda_emit_excel.py  test_veda_emit_excel_roundtrip.py  test_vedalang_compiler.py  test_vedalang_schema.py  test_xl2times_integration.py  test_xl2times_schemas.py
tools/: __init__.py  convert_attribute_master.py  sync_status.py
vedalang/: Untitled
xl2times/: __main__.py  datatypes.py  diagnostics.py  main.py  manifest.py  transforms.py  utils.py
(+89 files in other folders)
